Change history

* 1.11 (05/17/2016)
      o Fix: <a href="https://github.com/syllant/idea-plugin-remotesynchronizer/issues/18">Synchronization 'on save' causes entire IDE to hang #18</a>
      o Fix: <a href="https://github.com/syllant/idea-plugin-remotesynchronizer/issues/26">Remove French translation</a>

*  1.10 (03/20/2016)
      o Upgraded for IntelliJ 2016
      o Remove default key shortcuts

*  1.9.2 (02/19/2014)
      o Fix: Support for 1.6 JVM

*  1.9.1 (01/31/2014)
      o Fix: Fixed compatibility with products other than IDEA

*  1.9.1 (31 Jan. 2014)
      o Fixed compatibility with products other than IDEA

*  1.9 (29 Jan. 2014)
      o New option to synchronize files on save (in General config tab)

*  1.8 (14 Dec. 2013)
      o Upgraded for Idea 13

*  1.7.3 (21 Sept. 2013)
      o Upgraded for Idea 13 (<a href="https://github.com/syllant/idea-plugin-remotesynchronizer/issues/4">Issue #4 (NoClassDefFoundError when using plugin in IDEA 13 (Cardea-IU-132-106))</a>)

*  1.7.2 (05 Jan. 2012)
      o Fix: Bug with some modules without output path (again)

*  1.7.1 (25 Dec. 2011)
      o Fix: Bug with some modules without output path

*  1.7 (18 Mar. 2009)
      o New: Compiled with Java 5 for MacOSX users
      o Fix: display of relative paths in settings
      o Fix: NPE for Java files when output test directory is not valid

*  1.6.1 (2 Oct. 2008)
      o Fix: NPE for Java files when compilation output path were outside from project
      o Fix: tooltips show full paths

*  1.6 (25 Sept. 2008)
      o  Upgraded with Idea 8.0 new API
      o  New: option to store relative paths instead of absolute paths
      o  New: tables usability improved (double-click on row opens dialog, tooltip with full path)
      o  New: excluded **/.svn by default
      o  New: import/export format has changed, it used new Idea serialization API
      o  Fix: removed Hide button on tool window


*  1.5 (28 Sept. 2007)
      o  Compiled with Java 6